项目构建完成

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>spring-mybatis-manage</module>
         <module>spring-mybatis-web</module>
         <module>spring-mybatis-task</module>
+        <module>spring-mybatis-integration</module>
+        <module>spring-mybatis-web</module>
     </modules>
 
     <properties>
