--- a/spring-mybatis-service/pom.xml
+++ b/spring-mybatis-service/pom.xml
@@ -16,4 +16,30 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <!--sentinel apollo数据源-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-apollo</artifactId>
+        </dependency>
+        <!--sentinel核心类库-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+        </dependency>
+        <!--传输数据到dashboard控制台-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-transport-simple-http</artifactId>
+        </dependency>
+
+        <!---dubbo 2.6.6以下适配器-->
+        <!-- 引入此依赖，dubbo的服务接口和方法就会成为sentinel中的资源，
+        在配置了规则后就会自动享受到sentinel的防护能力 -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-dubbo-adapter</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
