mybatis自动生成mapper，未调通

--- a/spring-mybatis-service/pom.xml
+++ b/spring-mybatis-service/pom.xml
@@ -40,6 +40,10 @@
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-dubbo-adapter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>spring-mybatis-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
