--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <spring.version>4.3.20.RELEASE</spring.version>
         <cglib.version>2.2.2</cglib.version>
         <guava.version>19.0</guava.version>
-        <dubbo.version>2.6.6</dubbo.version>
+        <dubbo.version>3.0.0</dubbo.version>
         <netty-all.version>4.1.32.Final</netty-all.version>
         <commons.lang3.version>3.4</commons.lang3.version>
         <junit.version>4.12</junit.version>
@@ -221,7 +221,7 @@
 
             <!-- dubbo -->
             <dependency>
-                <groupId>com.alibaba</groupId>
+                <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
             </dependency>
@@ -418,6 +418,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-archetype-plugin</artifactId>
                 <version>2.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>4.3.20.RELEASE</version>
             </dependency>
 
         </dependencies>
