--- a/spring-mybatis-service/pom.xml
+++ b/spring-mybatis-service/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.example</groupId>
             <artifactId>spring-mybatis-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>spring-mybatis-biz</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
